--- a/app/src/main/res/layout/menuview.xml
+++ b/app/src/main/res/layout/menuview.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/getNewsListBtn"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#F5F5F5"
-
    >
+
     <TextView
         android:id="@+id/refreshBtn"
         android:layout_width="wrap_content"
@@ -36,7 +35,7 @@
         android:text="@string/setting"
         android:textColor="#A9A9A9"
         android:paddingTop="10dp"
-        android:paddingLeft="30dp"
+        android:paddingLeft="45dp"
         android:paddingBottom="10dp"
         android:layout_alignLeft="@+id/view1"
         android:layout_alignRight="@+id/view1"
@@ -60,7 +59,7 @@
         android:text="@string/helps"
         android:textColor="#A9A9A9"
         android:paddingTop="10dp"
-        android:paddingLeft="30dp"
+        android:paddingLeft="45dp"
         android:paddingBottom="10dp"
         android:layout_below="@+id/view2"
         android:layout_alignLeft="@+id/view2"
@@ -83,7 +82,7 @@
         android:text="@string/feedback"
         android:textColor="#A9A9A9"
         android:paddingTop="10dp"
-        android:paddingLeft="30dp"
+        android:paddingLeft="45dp"
         android:paddingBottom="10dp"
         android:layout_below="@+id/view3"
         android:layout_alignRight="@+id/view3"
