--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,67 +15,90 @@
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <RelativeLayout
-            android:id="@+id/mainHead"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/nav_icon"
-                android:layout_width="30dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="8dp"
-                android:src="@drawable/navigation_icon"
-                android:visibility="gone" />
+                android:adjustViewBounds="true"
+                android:scaleType="centerInside"
+                android:src="@drawable/kaler_kontho_logo" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/nav_icon"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:text="" />
 
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/kaler_kontho_logo" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tvDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Date" />
 
-            </LinearLayout>
+        <!--<RelativeLayout-->
+            <!--android:id="@+id/mainHead"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent">-->
 
-            <ImageView
-                android:id="@+id/setting_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dim20"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="20dp"
-                android:src="@drawable/menu_side"
-                android:visibility="visible"/>
-           <!-- <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/setting_icon"
-                android:orientation="vertical"
-                android:visibility="visible">
-            <include
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                layout="@layout/menuview"
-               ></include>
-            </LinearLayout>-->
+            <!--<ImageView-->
+                <!--android:id="@+id/nav_icon"-->
+                <!--android:layout_width="30dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginRight="8dp"-->
+                <!--android:src="@drawable/navigation_icon"-->
+                <!--android:visibility="gone" />-->
 
-        </RelativeLayout>
+            <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_toRightOf="@id/nav_icon"-->
+                <!--android:gravity="center_vertical"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="80dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:adjustViewBounds="true"-->
+                    <!--android:scaleType="centerInside"-->
+                    <!--android:src="@drawable/kaler_kontho_logo" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/tvDate"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Date" />-->
+
+            <!--</LinearLayout>-->
+
+            <!--<ImageView-->
+                <!--android:id="@+id/setting_icon"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="@dimen/dim20"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_marginRight="20dp"-->
+                <!--android:src="@drawable/menu_side"-->
+                <!--android:visibility="visible"/>-->
+           <!--&lt;!&ndash; <LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@+id/setting_icon"-->
+                <!--android:orientation="vertical"-->
+                <!--android:visibility="visible">-->
+            <!--<include-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--layout="@layout/menuview"-->
+               <!--&gt;</include>-->
+            <!--</LinearLayout>&ndash;&gt;-->
+
+        <!--</RelativeLayout>-->
 
     </android.support.v7.widget.Toolbar>
 
