--- a/app/src/main/res/layout/header_details.xml
+++ b/app/src/main/res/layout/header_details.xml
@@ -4,14 +4,21 @@
     android:layout_height="wrap_content"
     android:background="@color/homTop">
 
-    <ImageView
+    <LinearLayout
+        android:id="@+id/backView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/backBtn"
-        android:padding="5dp"
-        android:layout_margin="10dp"
-        android:layout_centerVertical="true"
-        android:background="@drawable/back_button"/>
+        android:padding="10dp"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/backBtn"
+            android:layout_margin="10dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/back_button"/>
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +26,7 @@
         android:text="@string/details"
         android:layout_centerVertical="true"
         android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/backBtn"/>
+        android:layout_toRightOf="@+id/backView"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -28,7 +35,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/setting_white"
-        android:layout_marginRight="15dp"/>
+        android:layout_marginRight="10dp"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +43,7 @@
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/settingBtn"
         android:background="@drawable/share_white"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="15dp"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +51,6 @@
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/shareBtn"
         android:background="@drawable/fav_white"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="15dp"/>
 
 </RelativeLayout>
