--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -9,11 +9,11 @@
        android:layout_height="match_parent"
        android:background="@drawable/splash"/>
 
-    <ProgressBar
+   <!-- <ProgressBar
         android:id="@+id/progressSplash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:visibility="gone"/>-->
 
     </RelativeLayout>
