--- a/app/src/main/res/layout/favorite_design.xml
+++ b/app/src/main/res/layout/favorite_design.xml
@@ -10,8 +10,8 @@
 
         <include
             layout="@layout/header_favorite"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 </RelativeLayout>
 
