--- a/app/src/main/res/layout/header_favorite.xml
+++ b/app/src/main/res/layout/header_favorite.xml
@@ -4,15 +4,23 @@
     android:layout_height="wrap_content"
     android:background="@color/homTop">
 
+<LinearLayout
+    android:id="@+id/backFavBtn"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/backBtn"
-        android:padding="5dp"
-        android:layout_margin="15dp"
         android:layout_centerVertical="true"
         android:background="@drawable/back_white"/>
+
+</LinearLayout>
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,7 +28,7 @@
         android:text="@string/favorite"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/backBtn"/>
+        android:layout_toRightOf="@+id/backFavBtn"/>
 
     <ImageView
         android:visibility="invisible"
