--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:background="@color/homTop"
         android:elevation="4dp"
+        app:theme="@style/Toolbar"
+        app:popupTheme="@style/Toolbar_Popup"
         android:minHeight="?attr/actionBarSize"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
