--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,10 @@
         android:layout_height="wrap_content"
         android:background="@color/homTop"
         android:elevation="4dp"
-        app:theme="@style/Toolbar"
-        app:popupTheme="@style/Toolbar_Popup"
+
+        app:popupTheme="@style/AppBaseTheme"
         android:minHeight="?attr/actionBarSize"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+       >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -35,6 +34,7 @@
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:text="" />
 
         </LinearLayout>
@@ -101,6 +101,23 @@
             <!--</LinearLayout>&ndash;&gt;-->
 
         <!--</RelativeLayout>-->
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/sideMenuBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/menu_side"
+                android:visibility="visible" ></ImageView>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.Toolbar>
 
