--- a/app/src/main/res/layout/favorite_design.xml
+++ b/app/src/main/res/layout/favorite_design.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:id="@+id/mainHeader"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
 
         <include
             layout="@layout/header_favorite"
