--- a/app/src/main/res/layout/latestnews.xml
+++ b/app/src/main/res/layout/latestnews.xml
@@ -18,4 +18,12 @@
         android:padding="5dp"
   />
 
+
+    <ProgressBar
+        android:id="@+id/latestNewBg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
 </RelativeLayout>
