--- a/app/src/main/res/layout/mostread.xml
+++ b/app/src/main/res/layout/mostread.xml
@@ -16,4 +16,12 @@
         android:padding="5dp"
   />
 
+
+    <ProgressBar
+        android:id="@+id/mostReadBg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
 </RelativeLayout>
