--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -9,62 +9,109 @@
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
-       android:layout_marginLeft="15dp"
-       android:gravity="center_vertical"
        android:orientation="vertical">
-       <TextView
-           android:id="@+id/notificationHeadTx"
+       <RelativeLayout
+           android:id="@+id/ViewShowTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:textColor="@color/kalerkontho_actionbar"
-           android:textSize="14sp"
-           android:textStyle="bold"
-           android:text="@string/notification1"/>
+           android:background="@color/homTop"
+           android:orientation="horizontal"
+           android:padding="@dimen/space"
+           android:visibility="gone">
+
+           <ImageView
+               android:id="@+id/imgBackSetting"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_centerVertical="true"
+               android:padding="@dimen/dim10"
+               android:src="@drawable/back_button" />
+
+           <TextView
+               android:id="@+id/tvComment"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_centerVertical="true"
+               android:layout_marginLeft="@dimen/dim30"
+               android:layout_toRightOf="@+id/imgBackComment"
+               android:text="@string/setting"
+               android:textColor="@color/whiteMy"
+               android:textSize="20sp" />
+
+           <ImageView
+               android:visibility="gone"
+               android:id="@+id/imgMenuComment"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_alignParentRight="true"
+               android:layout_centerVertical="true"
+               android:padding="@dimen/dim10"
+               android:src="@drawable/menu" />
+       </RelativeLayout>
+
        <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="match_parent"
+           android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
-           android:orientation="horizontal">
-       <TextView
-           android:id="@+id/notificationTitle"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:layout_weight="3"
-           android:textColor="@color/black"
-           android:textSize="13sp"
-           android:text="@string/notification2"/>
+           android:orientation="vertical">
 
-           <LinearLayout
-               android:layout_marginRight="15dp"
-               android:layout_width="0dp"
+           <TextView
+               android:id="@+id/notificationHeadTx"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:layout_weight="2"
-               android:gravity="right"
-               android:orientation="vertical">
+               android:textColor="@color/kalerkontho_actionbar"
+               android:textSize="14sp"
+               android:textStyle="bold"
+               android:layout_marginTop="@dimen/dim07"
 
-               <ToggleButton
-                   android:id="@+id/notificationTg"
-                   android:layout_width="60dp"
-                   android:layout_height="25dp"
-                   android:background="@drawable/check"
-                   android:textOn=""
-                   android:textOff=""
-                   android:focusable="false"
-                   android:focusableInTouchMode="false"
-                   android:layout_centerVertical="true"/>
+               android:text="@string/notification1"/>
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:gravity="center_vertical"
+               android:orientation="horizontal">
+               <TextView
+                   android:id="@+id/notificationTitle"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="3"
+                   android:textColor="@color/black"
+                   android:textSize="13sp"
+                   android:text="@string/notification2"/>
 
+               <LinearLayout
+                   android:layout_marginRight="15dp"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="2"
+                   android:gravity="right"
+                   android:orientation="vertical">
+
+                   <ToggleButton
+                       android:id="@+id/notificationTg"
+                       android:layout_width="60dp"
+                       android:layout_height="25dp"
+                       android:background="@drawable/check"
+                       android:textOn=""
+                       android:textOff=""
+                       android:focusable="false"
+                       android:focusableInTouchMode="false"
+                       android:layout_centerVertical="true"/>
+               </LinearLayout>
            </LinearLayout>
-
+           <TextView
+               android:id="@+id/notificatonAnnounce"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textColor="@color/gray"
+               android:textSize="12sp"
+               android:paddingTop="10dp"
+               android:textStyle="bold"
+               android:text="@string/notification3"/>
        </LinearLayout>
-       <TextView
-           android:id="@+id/notificatonAnnounce"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:textColor="@color/gray"
-           android:textSize="12sp"
-           android:paddingTop="10dp"
-           android:textStyle="bold"
-           android:text="@string/notification3"/>
+
+
    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
