--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="dim07">9dp</dimen>
     <dimen name="dim10">15dp</dimen>
     <dimen name="dim20">25dp</dimen>
+    <dimen name="dim15">20dp</dimen>
     <dimen name="dim30">45dp</dimen>
     <dimen name="dim40">60dp</dimen>
     <dimen name="dim70">95dp</dimen>
