--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="grid_imagew">160dp</dimen>
     <dimen name="dim07">7dp</dimen>
     <dimen name="dim10">10dp</dimen>
+    <dimen name="dim15">15dp</dimen>
     <dimen name="dim20">20dp</dimen>
     <dimen name="dim30">30dp</dimen>
     <dimen name="toggleh">33dp</dimen>
