--- a/app/src/main/res/layout/details_view.xml
+++ b/app/src/main/res/layout/details_view.xml
@@ -258,11 +258,21 @@
             ></include>
     </LinearLayout>
 
-    <FrameLayout
+  <!--  <FrameLayout
         android:id="@+id/containerViewDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        >
-    </FrameLayout>
+    </FrameLayout>-->
+
+<!--
+   <ProgressBar
+        android:id="@+id/bgDetails"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>-->
+
+
 
 </RelativeLayout>
